<resources>
    <string name="app_name">PersonasMaterialClase</string>
    <string name="action_settings">Settings</string>
    <string name="agregar">Agregar</string>
    <string name="agregarCedula">Agregar cedula</string>
    <string name="agregarNombre">Agregar nombre</string>
    <string name="agregarApellido">Agregar apellido</string>
    <string name="cancelar">Cancelar</string>
    <string name="Campos_vacios">mensajeErrorVacio</string>
    <string name="mensaje_persona_guardada_exitosamente">persona guardada exitosamente!</string>
    <string name="mensaje_seleccion_imagen">Seleccione la imagen</string>
    <string name="modificar">Modificar</string>
    <string name="modificarCedula">Modificar cedula</string>
    <string name="modificarNombre">Modificar nombre</string>
    <string name="modificarApellido">Modificar apellido</string>
    <string name="Mensaje_error_cedulaExistente">Cedula existente</string>
    <string name="Mensaje_personaModificada">Persona modificada exitosamente!!</string>
    <string name="eliminar">¿Está seguro que desea eliminar?</string>
    <string name="opcionPositiva">si</string>
    <string name="opcionNegativa">no</string>
</resources>
